# binom

./: .gitignore  README.md  pyproject.toml
src/binom/: __init__.py  core.py  diag.py  geometry.py  inputs.py  path.py  rad.py
